# academics

./: README.md
3d_data_elaboration/OpenCV/: labs.txt
3d_data_elaboration/OpenCV/ex1/: esercitazione1.cpp  esercitazione1.cpp~
3d_data_elaboration/OpenCV/ex2/: aEsercitazione2.cpp~  esercitazione2.cpp~
3d_data_elaboration/OpenCV/ex2/2/: robocup.cpp
3d_data_elaboration/OpenCV/ex3/: esercitazione3.cpp~
3d_data_elaboration/homework/es1/: CMakeLists.txt  readme.txt
3d_data_elaboration/homework/es1/src/: demo_simple_operations.cpp  demo_simple_operations_b.cpp  demo_voxel_grid_filtering.cpp  es1.cpp
3d_data_elaboration/homework/es2/: CMakeLists.txt
3d_data_elaboration/homework/es2/src/: demo_compute_FPFH.cpp  demo_compute_normals.cpp  demo_compute_normals.cpp~  es1.cpp~
3d_data_elaboration/homework/es3/: CMakeLists.txt  inputs.xml
3d_data_elaboration/homework/es3/data/robot_segmented/: 1.pcd  3.pcd  4.pcd  5.pcd  6.pcd
3d_data_elaboration/homework/es3/src/: cloud_registration.cpp  main_ground_based_people_detection.cpp  main_show_clouds_people.cpp  people_detector.cpp  plane_segmentation.cpp
3d_data_elaboration/homework/hw2/: CMakeLists.txt
3d_data_elaboration/homework/hw2/data/es5/robot/: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd
3d_data_elaboration/homework/hw2/src/: es1.cpp  es2.cpp  es3.cpp  es4.cpp  es5_registration.cpp  es5_robot_extraction.cpp  es6.cpp
3d_data_elaboration/homework/lab3/: CMakeLists.txt
3d_data_elaboration/homework/lab3/src/: dataset_visualizer.cpp  pairwise_registration.cpp
autonomous_robotics/: README.txt  README.txt~
autonomous_robotics/experience1/: CMakeLists.txt  CMakeLists.txt.bck2  CMakeLists.txt.bck~  CMakeLists.txt~  README.txt  esperienza1.launch  experience1_goal.odt  package.xml
autonomous_robotics/experience1/include/esperienza1/: Cella.h  Mappa.h  mapping_nxt.h  navigate_nxt.h
autonomous_robotics/experience1/movimento/: Spostamento.cpp  Spostamento.h  into_square.cpp
autonomous_robotics/experience1/report/src/: Relazione.aux  Relazione.tex  Relazione.toc
autonomous_robotics/experience1/src/: TestRobotGo.cpp  align.cpp  into_square.cpp  mappa.yaml  mappa.yaml~  mapping.cpp  navigation.cpp  noOstacoli.cpp  robot.cpp  robotGoTest.cpp  robot_matteo.cpp
autonomous_robotics/experience1/src/mapping/: Cella.cpp  Mappa.cpp  prove.cpp  test_disegno.cpp
autonomous_robotics/experience1/src/robot/: navigate_nxt.cpp  pi_rotate.cpp  pi_rotate.h~  rotation_test.cpp
autonomous_robotics/experience1/srv/: Direzione.srv  GetPesi.srv  possoAndare.srv  setOstacolo.srv
autonomous_robotics/experience2/: CMakeLists.txt  README.txt  experience2_goal.odt  package.xml
autonomous_robotics/experience2/report/src/: Relazione.aux  Relazione.tex  Relazione.toc
autonomous_robotics/experience2/src/detector/: camera_viewer.cpp  detection_example.cpp  detection_node.cpp
autonomous_robotics/experience2/srv/: computePose.srv  computePose.srv~
autonomous_robotics/experience2/videos/: README.txt
autonomous_robotics/experience3/: CMakeLists.txt  CMakeLists.txt~  README.txt  experience3_goal.odt  package.xml  package.xml~
autonomous_robotics/experience3/report/src/: ._Relazione.aux  ._Relazione.tex  ._Relazione.toc  Relazione.aux  Relazione.tex  Relazione.toc
autonomous_robotics/experience3/src/: mappa2d.cpp  provaMappa.cpp  simple_example.cpp
autonomous_robotics/experience3/videos/: README.txt~
